# pastoreo-inteligente

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_esquema_inicial.py  0002_estado_modelo_biomasa.py  0003_usuarios.py  0004_resolver_organizacion_de_potrero.py
backend/scripts/: crear_rol_app.py  crear_usuario_supabase.py  seed_demo.py
backend/src/srp/: app.py  worker.py
backend/tests/: conftest.py
backend/tests/agronomia_app/: test_especies_api.py  test_recalcular_biomasa.py
backend/tests/agronomia_domain/: test_crecimiento.py  test_estimacion.py  test_et0.py  test_hidrico.py  test_kalman.py  test_termico.py
backend/tests/calibracion/: test_bayes.py  test_handler.py  test_repositorio_pg.py  test_repositorio_sistema.py
backend/tests/consultas/: test_historial_potrero.py
backend/tests/ganado/: conftest.py  e2e_app.py  test_api_e2e.py  test_casos_de_uso.py  test_dominio.py  test_repositorios.py
backend/tests/gestion_potreros/: e2e_app.py  test_casos_uso.py  test_dominio.py  test_estado_potrero_handler.py  test_geometria_validator.py  test_repositorio.py
backend/tests/infra_clima/: conftest.py  test_fallback.py  test_job.py  test_open_meteo.py  test_repositorio_clima.py
backend/tests/infra_ndvi/: conftest.py  test_adapter.py  test_cdse_auth.py  test_cdse_catalogo.py  test_descarga_s3.py  test_job.py  test_ndvi_local.py  test_repositorio_ndvi.py
backend/tests/organizaciones/: test_fincas_e2e.py
backend/tests/planimetria/: conftest.py  (+4 more)
(+150 files in other folders)
