[project]
name = "srp-backend"
version = "0.1.0"
description = "Sistema de Rotación de Pastos — backend (DDD + hexagonal)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pydantic>=2.7",
    "shapely>=2.0",
    "pyproj>=3.6",
    "geopandas>=1.0",
    "ezdxf>=1.3",
    "rasterio>=1.3",
    "numpy>=1.26",
    "httpx>=0.27",
    "PyJWT>=2.8",
    "apscheduler>=3.10",
    "python-multipart>=0.0.9",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: `Depends(...)` en defaults es el idioma de inyección de FastAPI
ignore = ["B008"]
